--- a/server/package.json
+++ b/server/package.json
@@ -21,7 +21,7 @@
     "multer": "^1.4.5-lts.1",
     "multer-storage-cloudinary": "^4.0.0",
     "nodemailer": "^6.9.11",
-    "nodemon": "^3.0.1",
+    "nodemon": "^3.1.0",
     "ts-node": "^10.9.1",
     "yup": "^1.3.2"
   },
@@ -32,6 +32,7 @@
     "@types/jsonwebtoken": "^9.0.4",
     "@types/nodemailer": "^6.4.14",
     "@types/nodemailer-express-handlebars": "^4.0.5",
+    "@types/nodemon": "^1.19.6",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "nodemailer-express-handlebars": "^6.1.2",
