--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^9.1.0",
+    "react-router-dom": "^6.22.3",
     "react-scripts": "5.0.1",
     "redux-persist": "^6.0.0",
     "tailwind-merge": "^2.2.2",
