Student CRUD without UPDATE
Implement update!

--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -100,7 +100,8 @@
   
       "outDir": "dist/",
   
-      "baseUrl": "src",
+      "baseUrl": "./src/",
+      // "baseUrl": "./src",
       "paths": {
         "@config/*": ["config/*"]
       }
