Grade CRUD tsconfig.json now accepts user as type (for route guard)
little updates here and there...

--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -103,10 +103,11 @@
       "baseUrl": "./src/",
       // "baseUrl": "./src",
       "paths": {
-        "@config/*": ["config/*"]
+        "@config/*": ["config/*"],
       }
     },
-    "include": ["src/**/*"]
+    "include": ["src/**/*"],
+    "files": ["src/types/custom.d.ts"]
   }
   
   
