Added SubjectEdit, fixed SubjectAdd, some controller changes, added route in App.tsx, fixed react-select problem

--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "concurrently": "^8.2.2"
+    "@types/lodash.get": "^4.4.9",
+    "concurrently": "^8.2.2",
+    "lodash.get": "^4.4.2"
   }
 }
