Bar chart added in student profile

--- a/client/package.json
+++ b/client/package.json
@@ -17,10 +17,12 @@
     "@types/react-helmet": "^6.1.11",
     "@types/react-table": "^7.7.20",
     "async-mutex": "^0.5.0",
+    "chart.js": "^4.4.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "lucide-react": "^0.359.0",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
     "react-redux": "^9.1.0",
